# cookiecutter-cli-mit-fixins

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
mitfixins/: cli.py  cli_helper.py
tests/: conftest.py  test_cli.py  test_cli_helper.py  try-print-config
{{cookiecutter.command_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.command_name}}/tests/: conftest.py  test_cli.py  test_cli_helper.py
{{cookiecutter.command_name}}/{{cookiecutter.command_name}}/: __init__.py  cli.py  cli_helper.py
{{cookiecutter.project_name}}/: README.md
{{cookiecutter.project_name}}/tests/: test_cli_helper.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
