[tool.poetry]
name = "{{cookiecutter.command_name}}"
version = "0.1.0"
description = "{{cookiecutter.command_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.1"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^4.5"
pre-commit = "^1.20"
pysnooper = "^0.2.8"
radon = "^4.0"

[tool.poetry.scripts]
{{cookiecutter.command_name}} = "{{cookiecutter.command_name}}.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
